syntax = "proto3";

import "google/protobuf/any.proto";

package starknet;

option go_package = "./starknet;starknet";

message CallRequest {
  string method = 1;
  map<string, google.protobuf.Any> params = 2;
  bytes code = 3;
}

message CallResponse {
  repeated google.protobuf.Any result = 1;
}

message AddressRequest {
  string salt = 1;
  google.protobuf.Any constructor_definition = 2;
  repeated uint32 constructor_calldata = 3;
  string caller_address = 5;
}

message AddressResponse {
  string address = 1;
}

service CAIROVM {
  rpc Call (CallRequest) returns (CallResponse) {}
  rpc Address (AddressRequest) returns (AddressResponse) {}
}